--- a/react-front/front/src/pages/login/styles.css
+++ b/react-front/front/src/pages/login/styles.css
@@ -1,8 +1,8 @@
-* {
+/* * {
 	margin: 100px; 
 	padding: 100px; 
     background: #715bd4; 
-}
+} */
 .login{
     max-width: 700px;
     margin: 20px auto 0;
@@ -19,14 +19,14 @@
 }
 input {
 	outline: 10px;
-    border: 10px solid #715bd4;
+    border: 10px solid #ffffff;
     border-radius: 10px;
     padding: 1px;
-    color: #ffffff;
-    background: #715bd4;
+    color: #715bd4;
+    background: #ffffff;
 }
 .login .forms{
-    background: #ffffff;
+    background: #715bd4;
     border: 1px solid #dddddd;
     border-radius: 100px;
     padding: 100px;
@@ -44,6 +44,6 @@ input {
     margin-bottom: 20px;
 }
 .login .forms .buttom {
-    background: #ffffff;
+    background: #715bd4;
     margin-top: 50px;
 }
