--- a/react-front/front/src/pages/login/styles.css
+++ b/react-front/front/src/pages/login/styles.css
@@ -38,12 +38,15 @@ input {
     margin-inline: 10px;
 
 }
-.login .forms .buttom{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-.login .forms .buttom {
-    background: #715bd4;
+
+.login .forms .buttom button {
+    background: #ffffff;
     margin-top: 50px;
+    border: 20px solid #ffffff;
+    border-radius: 50px;
+    font-size: 20px;
+    margin-right: 40px;
+}
+.login .forms .buttom button:hover {
+    opacity: 0.7;
 }
