--- a/react-front/front/src/pages/notes/styles.css
+++ b/react-front/front/src/pages/notes/styles.css
@@ -1,4 +1,4 @@
-.notes-info{
+.user-info{
     max-width: 700;
     margin: 20px auto 0;
     padding: 20px;
@@ -6,14 +6,64 @@
     border-radius: 5px;
     border: 1px solid #dddddd;
 }
-.notes-info h1{
+.user-info h1{
     font-size: 32px;
 }
-.notes-info p{
+.user-info p{
     color: #666666;
     line-height: 24px;
     margin-top:5px;
 }
-.notes-info p a {
+.user-info p a {
     color: #715bd4;
+}
+.user-info img {
+    display: flex;
+    border: 3px solid #715bd4;
+    border-radius: 100px;
+    padding: 1px;
+    height: 200px;
+}
+.user-info .upper{
+    display:flex;
+
+}
+.user-info .upper textarea{
+    display:flex;
+    border: 3px solid #715bd4;
+    border-radius: 20px;
+    margin-left: 55px;
+    width: 600px;
+    padding: 10px;
+
+}
+.all p{
+    max-width: 700;
+    margin: 20px auto 0;
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 5px;
+    border: 1px solid #dddddd;
+}
+.user-info button{
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    background: #715bd4;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 700px;
+}
+.user-info button:hover{
+    opacity: 0.7;
+}
+.user-info .Link{
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    background: #715bd4;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
 }
